project(XamlUITest CXX)

file(GLOB TEST_SOURCE "src/*.cpp")
if(WIN32)
    add_executable(ui_test WIN32 ${TEST_SOURCE})
else()
    add_executable(ui_test ${TEST_SOURCE})
endif()
target_include_directories(ui_test PUBLIC include)
target_link_libraries(ui_test xaml_ui_controls)
target_link_libraries(ui_test xaml_ui_canvas)
target_link_libraries(ui_test xaml_ui)
