project(XamlUITest CXX)

file(GLOB TEST_SOURCE "src/*.c*")
add_executable(ui_test ${TEST_SOURCE})
if(WIN32)
    set_target_properties(ui_test PROPERTIES WIN32_EXECUTABLE ON)
endif()
target_compile_definitions(ui_test PRIVATE "_USE_MATH_DEFINES")
target_include_directories(ui_test PUBLIC include)
target_link_libraries(ui_test xaml_ui_controls)
target_link_libraries(ui_test xaml_ui_canvas)
target_link_libraries(ui_test xaml_ui)
